{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 39,
  "lineage": "3c730b52-d248-3a87-f479-008f8cd1c917",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fe6e8c8bf913a78",
            "arn": "arn:aws:ec2:us-east-1:216989097838:elastic-ip/eipalloc-08fe6e8c8bf913a78",
            "association_id": "eipassoc-0bf305f60d45a12fc",
            "domain": "vpc",
            "id": "eipalloc-08fe6e8c8bf913a78",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dedde516b7eb88da",
            "private_dns": "ip-10-0-1-120.ec2.internal",
            "private_ip": "10.0.1.120",
            "public_dns": "ec2-107-20-155-71.compute-1.amazonaws.com",
            "public_ip": "107.20.155.71",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:216989097838:instance/i-00902c56c9b432ad9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00902c56c9b432ad9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09677e277770aeae2"
              }
            ],
            "primary_network_interface_id": "eni-09677e277770aeae2",
            "private_dns": "ip-172-31-22-35.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.22.35",
            "public_dns": "ec2-13-222-2-223.compute-1.amazonaws.com",
            "public_ip": "13.222.2.223",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bf3b4ed1f30b5647",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbd6e16827346b81",
            "tags": {
              "Name": "tf-ec2-instance"
            },
            "tags_all": {
              "Name": "tf-ec2-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0569d007bf13029bc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "i-00902c56c9b432ad9",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:216989097838:instance/i-091a05f42ca0a44f2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091a05f42ca0a44f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypairlinux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-018fae934c92a9c03"
              }
            ],
            "primary_network_interface_id": "eni-018fae934c92a9c03",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb19fcec718f1203",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c58ed81cfa1d544a",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private-ec2",
              "Project": "devops-101"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0134a837df9155974"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "i-091a05f42ca0a44f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-052064a798f08f0d3",
            "arn": "arn:aws:ec2:us-east-1:216989097838:instance/i-0e4bca1d7ea2b3d4c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e4bca1d7ea2b3d4c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypairlinux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-038317858c00a5b35"
              }
            ],
            "primary_network_interface_id": "eni-038317858c00a5b35",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_dns": "ec2-50-17-101-135.compute-1.amazonaws.com",
            "public_ip": "50.17.101.135",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e95fd573ec0d2b01",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069cf428a1c9b90af",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-ec2",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-ec2",
              "Project": "devops-101"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0134a837df9155974"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "i-0e4bca1d7ea2b3d4c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ssh",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:internet-gateway/igw-005d3c43cabd770a9",
            "id": "igw-005d3c43cabd770a9",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-main",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-main",
              "Project": "devops-101"
            },
            "vpc_id": "vpc-0473604964de2567d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08fe6e8c8bf913a78",
            "association_id": "eipassoc-0bf305f60d45a12fc",
            "connectivity_type": "public",
            "id": "nat-0c4684db8090bb042",
            "network_interface_id": "eni-0dedde516b7eb88da",
            "private_ip": "10.0.1.120",
            "public_ip": "107.20.155.71",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-069cf428a1c9b90af",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-a",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public-a",
              "Project": "devops-101"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-internet_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054a480d1891a7d201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c4684db8090bb042",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-054a480d1891a7d20",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-054a480d1891a7d20"
          },
          "dependencies": [
            "aws_eip.public",
            "aws_nat_gateway.public",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-005d3c43cabd770a9",
            "id": "r-rtb-0a28ae5b2a6a7372e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0a28ae5b2a6a7372e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0a28ae5b2a6a7372e"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:route-table/rtb-054a480d1891a7d20",
            "id": "rtb-054a480d1891a7d20",
            "owner_id": "216989097838",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c4684db8090bb042",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-101"
            },
            "timeouts": null,
            "vpc_id": "vpc-0473604964de2567d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "rtb-054a480d1891a7d20",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:route-table/rtb-0a28ae5b2a6a7372e",
            "id": "rtb-0a28ae5b2a6a7372e",
            "owner_id": "216989097838",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-005d3c43cabd770a9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            },
            "timeouts": null,
            "vpc_id": "vpc-0473604964de2567d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "rtb-0a28ae5b2a6a7372e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d89f75fe665fe5f3",
            "region": "us-east-1",
            "route_table_id": "rtb-054a480d1891a7d20",
            "subnet_id": "subnet-0c58ed81cfa1d544a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc26e6ee02c0a795",
            "region": "us-east-1",
            "route_table_id": "rtb-0a28ae5b2a6a7372e",
            "subnet_id": "subnet-069cf428a1c9b90af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-08bf63dbd560ca1f8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bf63dbd560ca1f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d84eb9d9f082ef0d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20251003222508469200000008",
            "name_prefix": "terraform-",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-ec2-sg",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-ec2-sg",
              "Project": "devops-101"
            },
            "timeouts": null,
            "vpc_id": "vpc-0473604964de2567d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-08bf63dbd560ca1f8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-0d84eb9d9f082ef0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d84eb9d9f082ef0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20251003222505446900000006",
            "name_prefix": "terraform-",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-rds-sg",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-rds-sg",
              "Project": "devops-101"
            },
            "timeouts": null,
            "vpc_id": "vpc-0473604964de2567d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-0d84eb9d9f082ef0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:security-group/sg-0134a837df9155974",
            "description": "allow ssh to ec2",
            "egress": [],
            "id": "sg-0134a837df9155974",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "main-ssh_access",
            "name_prefix": "",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Project": "devops-101"
            },
            "timeouts": null,
            "vpc_id": "vpc-0473604964de2567d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "sg-0134a837df9155974",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0c58ed81cfa1d544a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c58ed81cfa1d544a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private",
              "Project": "devops-101"
            },
            "vpc_id": "vpc-0473604964de2567d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0c58ed81cfa1d544a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-0683ba85209f0db74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0683ba85209f0db74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private_b",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-private_b",
              "Project": "devops-101"
            },
            "vpc_id": "vpc-0473604964de2567d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-0683ba85209f0db74",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:subnet/subnet-069cf428a1c9b90af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069cf428a1c9b90af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216989097838",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-public",
              "Project": "devops-101"
            },
            "vpc_id": "vpc-0473604964de2567d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "216989097838",
            "id": "subnet-069cf428a1c9b90af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:216989097838:vpc/vpc-0473604964de2567d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c924bec7d161e7b0",
            "default_route_table_id": "rtb-0a169d02cca301c3d",
            "default_security_group_id": "sg-081adb5e82750ddbf",
            "dhcp_options_id": "dopt-0523f609c7816125b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0473604964de2567d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a169d02cca301c3d",
            "owner_id": "216989097838",
            "region": "us-east-1",
            "tags": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "devops-101"
            },
            "tags_all": {
              "Contact": "adetayo.eyelade2@gmail.com",
              "Managed_by": "Terraform",
              "Name": "main-vpc",
              "Project": "devops-101"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}